--- a/asmaUlHusna/style.css
+++ b/asmaUlHusna/style.css
@@ -59,7 +59,6 @@ header  {
     color: #998200;
 }
 
-
 footer {
     background-color: gold;
     box-shadow: 1px -1px 2px 0px lightgrey;
@@ -72,16 +71,13 @@ footer {
     font-size: 14px;
 }
 
-
-.play{
-    width: 30%;
-    box-shadow: 1px 1px 5px 1px lightgrey;
-    border-radius: 20px;
-    padding: 10px; 
-}
-.modal-book{
-    border-right: 1px solid grey;
-}
 .text{
-    margin-top: 100px;
+    font-family: 'PT Serif', serif;
+    margin: 0 auto;
+    width: 70%;
+    line-height: 30px;
+    letter-spacing: 1px;
+}
+.modal-img{
+    width: 80%;    
 }
